<resources>
    <string name="accessibility_service_name">我的智能安装</string>
    <string name="accessibility_service_description">智能安装服务，无需用户的任何操作就可以自动安装程序。</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="app_version">VERSION:%1$s</string>
    <string name="login_local_error">本地登录失败</string>
    <string name="login">登录</string>
    <string name="logining">登录中</string>
    <string name="need_emp_no">请输入员工号</string>
    <string name="scan_emp_no">扫描员工号</string>
    <string name="gongxu">工序</string>
    <string name="pandian">盘点</string>
    <string name="emp_no">员工号</string>
    <string name="emp_info_error">员工信息错误</string>
    <string name="app_name">MES</string>
    <string name="login_out">退出</string>
    <string name="config_server">配置服务器</string>
    <string name="server_config">服务器信息配置</string>
    <string name="server_ip">服务器地址</string>
    <string name="server_port">端口</string>
    <string name="machine_code">机台号</string>
    <string name="config_dismiss">关闭</string>
    <string name="config_save">保存</string>
    <string name="time_error">设备时间与服务器时间偏差较大,请设置设备当前时间</string>
    <string name="choose_org_error">部门信息有误</string>
    <string name="submit_error">提交失败</string>
    <string name="data_save">已保存</string>
    <string name="server_config_error">服务器信息配置有误</string>
    <string name="submit_data_error">提交数据有误</string>
    <string name="server_error">与服务器通信异常</string>
    <string name="submit_ok">提交成功</string>
    <string name="no_data">无数据</string>
    <string name="server_data_bag_error">获取失败</string>
    <string name="switch_down">扫描类型已切换</string>
    <string name="process_submited">该工序已于%1$s提交过,是否重新提交数据</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="notice">注意</string>
    <string name="duplicate_data">条目重复</string>
    <string name="app_downloading">正在下载更新程序......</string>
    <string name="data_need">数据缺失</string>
    <string name="choose">选择</string>
    <string name="choose_org">选择部门</string>
    <string name="net_disable">当前无网络</string>
    <string name="wait_choose">请选择</string>
    <string name="form_required">请完善表单</string>
    <string name="hj">合计:</string>
    <string name="unit_length_mm">毫米</string>
    <string name="unit_piece">片</string>
    <string name="pandian_tab_name">盘点</string>
    <string name="szb_tab_name">超树脂板</string>
    <string name="pbj_tab_name">配棒检</string>
    <string name="pb_tab_name">配棒</string>
    <string name="jb_tab_name">解棒</string>
    <string name="yb_tab_name">验棒</string>
    <string name="qx_tab_name">清洗</string>
    <string name="fgqx_tab_name">返工清洗</string>
    <string name="qgsfh_tab_name">切割碎复核</string>
    <string name="zx_tab_name">装箱</string>
    <string name="zt_tab_name">装托</string>
    <string name="rk_tab_name">入库</string>
    <string name="ck_tab_name">出库</string>
    <string name="db_tab_name">单包</string>
    <string name="action_settings">设置</string>
    <string name="station">工位</string>
    <string name="brick_id">BrickId</string>
    <string name="wait_scan">请扫描......</string>
    <string name="mtype_scan_first">请先扫描机型</string>
    <string name="mtype_not_match">机型工位关系数据不匹配</string>
    <string name="brickid_scan_first">请先扫描晶砖编号</string>
    <string name="btn_scan_product">扫描产品</string>
    <string name="l_jzbh">晶砖编号</string>
    <string name="product_delete">删除</string>
    <string name="product_save">保存</string>
    <string name="product_save_success">保存成功</string>
    <string name="wait_choose_mtype">请选择机型</string>
    <string name="wait_scan_gdh">请扫描切片工单</string>
    <string name="pb_l_mtype">机型</string>
    <string name="pb_l_gdh">切片工单</string>
    <string name="th_brick_id">BrickID</string>
    <string name="th_length">长度</string>
    <string name="th_level">等级</string>
    <string name="pb_b_gdh">扫描工单</string>
    <string name="pb_b_mtype">扫描机型</string>
    <string name="pb_b_brick">扫描晶砖</string>
    <string name="pb_l_station">工位</string>
    <string name="pb_b_submit">提交</string>
    <string name="pb_b_clear">清空</string>
    <string name="different_level">晶砖等级不一致</string>
    <string name="length_error">非法棒长:%1$.2f,必须介于%2$.2f-%3$.2f之间</string>
    <string name="qpgdh_error">切片工单号错误</string>
    <string name="cc_error">当前扫入条码:%1$s尺寸:%2$.2f与列表中的尺寸:%3$.2f不一致,请核对</string>
    <string name="pbj_l_code">条码</string>
    <string name="pbj_l_kjcd">扣减长度</string>
    <string name="pbj_l_gghyxcd">更改后棒长</string>
    <string name="pbj_l_ggyy">更改原因</string>
    <string name="pbj_l_yxbc">有效棒长</string>
    <string name="pbj_l_size">尺寸</string>
    <string name="pbj_l_dj">倒角</string>
    <string name="pbj_b_quali">合格</string>
    <string name="pbj_b_unquali">不合格</string>
    <string name="pbj_dj_yes">有</string>
    <string name="pbj_dj_no">无</string>
    <string name="pbj_yy_need">请选择更改原因</string>
    <string name="yb_l_spyy">碎片原因</string>
    <string name="yb_l_sl">数量</string>
    <string name="yb_l_yzd">硬质点(mm)</string>
    <string name="yb_l_hbp">厚薄片(mm)</string>
    <string name="yb_l_zb">2.1 撞棒(mm)</string>
    <string name="yb_l_dp">2.2 掉片(mm)</string>
    <string name="yb_l_kxs">2.3 卡线碎(mm)</string>
    <string name="yb_l_qt">2.4 其他(mm)</string>
    <string name="yb_l_zqbb">整齐崩边(mm)</string>
    <string name="yb_l_dxfq">1.2 断线放弃(mm)</string>
    <string name="yb_b_submit">提交</string>
    <string name="yb_b_clear">清空</string>
    <string name="yb_b_scrap">报废</string>
    <string name="yb_l_qps">2.5 切片碎(片)</string>
    <string name="no_cj">槽距数据错误</string>
    <string name="scrap_confirm">确定报废该晶砖?</string>
    <string name="yb_l_zgbf">1.1 整根报废</string>
    <string name="qx_l_llcps">理论出片数</string>
    <string name="qx_l_qps">切片碎</string>
    <string name="qx_l_sjps">插片总片数</string>
    <string name="qx_l_hs">盒数</string>
    <string name="qx_l_mhps">每盒片数</string>
    <string name="qx_l_ps">片数</string>
    <string name="qx_l_bb">崩边</string>
    <string name="qx_l_yp">样片</string>
    <string name="qx_l_qxzps">清洗总片数</string>
    <string name="qx_l_jjqxs">清洗碎</string>
    <string name="qx_l_qxsbs">清洗设备碎</string>
    <string name="qx_l_zqqss">整齐缺损碎</string>
    <string name="qx_l_qt">其他</string>
    <string name="qx_l_zj">清洗碎片合计</string>
    <string name="qx_l_cc">尺寸</string>
    <string name="qx_l_db">单包</string>
    <string name="qx_l_jzdj">等级</string>
    <string name="qx_l_cszbyxcd">超树脂板有效长度</string>
    <string name="qgsfh_l_spyy">碎片原因</string>
    <string name="qgsfh_l_sl">数量</string>
    <string name="qgsfh_l_yzd">硬质点(片)</string>
    <string name="qgsfh_l_hbp">厚薄片(片)</string>
    <string name="qgsfh_l_zb">撞棒(片)</string>
    <string name="qgsfh_l_dp">掉片(片)</string>
    <string name="qgsfh_l_kxs">卡线碎(片)</string>
    <string name="qgsfh_l_qt">其他(片)</string>
    <string name="qgsfh_l_zqbb">整齐崩边(片)</string>
    <string name="qgsfh_l_dxfq">断线放弃(片)</string>
    <string name="qgsfh_b_submit">提交</string>
    <string name="qgsfh_b_clear">清空</string>
    <string name="qgsfh_l_qps">切片碎(片)</string>
    <string name="zx_b_scan_xz">扫描箱子</string>
    <string name="zx_b_scan_hz">扫描盒子</string>
    <string name="zx_l_xh">箱号</string>
    <string name="zx_l_sl">数量</string>
    <string name="zx_l_hh">盒号</string>
    <string name="zx_l_level">等级</string>
    <string name="zx_b_submit">提交</string>
    <string name="zx_b_clear">清空</string>
    <string name="xz_scan_first">请先扫描箱子</string>
    <string name="hz_scan_need">请扫描盒子</string>
    <string name="zx_size_full">一箱不能超过6盒</string>
    <string name="zx_size_standard">一箱只能是4盒或者6盒</string>
    <string name="hz_duplicate">盒子不能重复</string>
    <string name="hz_dj_diff">盒子等级必须一致</string>
    <string name="db_diff">单包类别必须一致</string>
    <string name="jglx_diff">加工类型必须一致</string>
    <string name="gylx_diff">工艺类型必须一致</string>
    <string name="cplx_diff">产品类型必须一致</string>
    <string name="cc_diff">尺寸必须一致</string>
    <string name="db_type">单包类别:</string>
    <string name="b_cd">撤单</string>
    <string name="zx_hs">盒数:</string>
    <string name="zx_ps">片数:</string>
    <string name="piece_not_full">未满1600片是否装箱?</string>
    <string name="case_infos">等级:%1$s,尺寸:%2$s,单包:%3$s</string>
    <string name="case_info_diff">扫描此条码的等级:%1$s,尺寸:%2$s,单包:%3$s，与当前列表中的不一致</string>
    <string name="case_name_error">箱号必须以字母C开头或者包含-C</string>
    <string name="zt_b_scan_xz">扫描箱子</string>
    <string name="zt_b_scan_th">扫描托号</string>
    <string name="zt_l_xh">箱号</string>
    <string name="zt_l_th">托号</string>
    <string name="zt_l_sl">数量</string>
    <string name="zt_l_dj">等级</string>
    <string name="zt_b_submit">提交</string>
    <string name="zt_b_clear">清空</string>
    <string name="th_scan_first">请先扫描托号</string>
    <string name="xz_scan_need">请扫描箱子</string>
    <string name="xz_duplicate">箱子不能重复</string>
    <string name="zt_size_full">一托不能超过30箱</string>
    <string name="zt_hs">箱数:</string>
    <string name="zt_ps">片数:</string>
    <string name="zt_dj_diff">箱子等级必须一致</string>
    <string name="t_infos">等级:%1$s,尺寸:%2$s,单包:%3$s</string>
    <string name="t_info_diff">扫描此条码的等级:%1$s,尺寸:%2$s与当前列表中的不一致</string>
    <string name="t_name_error">托号必须以字母P开头或者包含-P</string>
    <string name="rk_b_scan_tm">扫描条码</string>
    <string name="rk_l_tm">条码</string>
    <string name="rk_l_lb">类别</string>
    <string name="rk_l_sl">数量</string>
    <string name="rk_l_jzrq">记账日期</string>
    <string name="rk_l_hj">合计</string>
    <string name="rk_b_submit">提交</string>
    <string name="rk_b_clear">清空</string>
    <string name="tm_scan_first">请扫描条码</string>
    <string name="jzrq_need">请填写记账日期</string>
    <string name="detect_duplicate_data">列表中含有重复条目</string>
    <string name="base_info_diff">扫描此条码的等级:%1$s,尺寸:%2$s,单包:%3$s，与当前列表中的不一致,是否添加？</string>
    <string name="ck_l_bill">出库单号</string>
    <string name="ck_b_scan_tm">扫描条码</string>
    <string name="ck_l_tm">条码</string>
    <string name="ck_l_lb">类别</string>
    <string name="ck_l_sl">数量</string>
    <string name="ck_l_jzrq">记账日期</string>
    <string name="ck_l_hj">合计</string>
    <string name="ck_b_submit">提交</string>
    <string name="ck_b_clear">清空</string>
    <string name="ck_l_jf">借否</string>
    <string name="jb_l_reason">解棒原因</string>
    <string name="jb_l_bf">报废</string>
    <string name="jb_b_submit">解棒</string>
    <string name="db_l_brickId">条码</string>
    <string name="db_l_type">类别</string>
    <string name="db_l_cate">单包类型</string>
    <string name="db_b_add">设置单包</string>
    <string name="db_b_cd">撤销单包</string>
    <string name="need_cate">请输入单包类型</string>
    <string name="wx_tab_name">维修</string>
    <string name="by_tab_name">保养</string>
    <string name="oper_code_label">操作工工号</string>
    <string name="oper_name_label">姓名</string>
    <string name="equip_code_label">设备条码</string>
    <string name="equip_name_label">设备名称</string>
    <string name="btn_submit">提交</string>
    <string name="maintain_type_label">保养类别</string>
    <string name="equip_stop_date_label">停机时间</string>
    <string name="scan_oper">扫描</string>
    <string name="scan_equip">扫描</string>
    <string name="level_1">一级</string>
    <string name="level_2">二级</string>
    <string name="level_3">三级</string>
    <string name="need_scan_oper">请扫描操作工</string>
    <string name="need_scan_equip">请扫描设备</string>
    <string name="need_choose_maintain_type">请选择保养类别</string>
    <string name="need_choose_stop_date">请选择停机日期</string>
    <string name="need_choose_stop_time">请选择停机时间</string>
    <string name="stop_date">日期</string>
    <string name="stop_time">时间</string>
    <string name="note_datetime_label">通知时间</string>
    <string name="accept_datetime_label">受理时间</string>
    <string name="complete_datetime_label">处理时间</string>
    <string name="maintain_oper_label">受理人</string>
    <string name="pandian_workshop">盘点车间</string>
    <string name="pandian_sequence_num">序号</string>
    <string name="pandian_brickid">晶体编号</string>
    <string name="pandian_weight">自盘重量</string>
    <string name="pandian_submit">提交</string>
    <string name="pandian_clear">清空</string>
</resources>