<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/pb_l_mtype"
            android:textColor="#3f51b5"
            android:textSize="15sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/pb_v_mtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/wait_scan"></TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/pb_b_mtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pb_b_mtype" />

        <Button
            android:id="@+id/pb_scan_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan_product" />

        <Button
            android:id="@+id/pb_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_save" />
    </LinearLayout>

    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dividers"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pb_l_station"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pb_l_station"
            app:layout_widthPercent="20%"></TextView>

        <TextView
            android:id="@+id/pb_brick_id"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/th_brick_id"
            android:layout_toRightOf="@+id/pb_l_station"
            app:layout_widthPercent="60%"></TextView>

        <TextView
            android:id="@+id/pb_length"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_toRightOf="@+id/pb_brick_id"
            android:layout_weight="1"
            android:text="@string/th_length"
            app:layout_widthPercent="20%"></TextView>
    </android.support.percent.PercentRelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pb_product_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_weight="0.75" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pb_b_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pb_b_submit" />

        <Button
            android:id="@+id/pb_b_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pb_b_clear" />
    </LinearLayout>

</LinearLayout>
