<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pandian_workshop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/pandian_workshop"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_widthPercent="25%" />
    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dividers"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pandian_sequence_num"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pandian_sequence_num"
            app:layout_widthPercent="18%" />

        <TextView
            android:id="@+id/pandian_brickid"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_toRightOf="@+id/pandian_sequence_num"
            android:layout_weight="1"
            android:text="@string/pandian_brickid"
            app:layout_widthPercent="46%" />

        <TextView
            android:id="@+id/pandian_weight"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_toRightOf="@+id/pandian_brickid"
            android:layout_weight="1"
            android:text="@string/pandian_weight"
            app:layout_widthPercent="18%" />

    </android.support.percent.PercentRelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pandian_product_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pandian_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pandian_submit" />

        <Button
            android:id="@+id/pandian_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pandian_clear" />
    </LinearLayout>

</LinearLayout>
