<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/rk_l_tm"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rk_v_tm_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/wait_scan"
            android:textSize="13sp" />
    </LinearLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dividers"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rk_l_jzrq"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/rk_l_jzrq"
            app:layout_widthPercent="30%" />

        <LinearLayout
            android:id="@+id/rk_v_jzrq_wrapper"
            style="@style/edit_text_wrapper"
            android:layout_toRightOf="@+id/rk_l_jzrq"
            app:layout_widthPercent="70%">

            <Button
                android:id="@+id/rk_v_jzrq"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_edit_text_material"
                android:text=""
                android:textColor="@color/text"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dividers"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rk_l_hj"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/rk_l_hj"
            app:layout_widthPercent="30%" />

        <TextView
            android:id="@+id/rk_v_hj"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_toRightOf="@+id/rk_l_hj"
            android:layout_weight="1"
            android:text=""
            app:layout_widthPercent="70%" />

    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dividers"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rk_l_lb"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/rk_l_lb"
            app:layout_widthPercent="20%" />

        <TextView
            android:id="@+id/rk_l_tm"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_toEndOf="@+id/rk_l_lb"
            android:layout_toRightOf="@+id/rk_l_lb"
            android:layout_weight="1"
            android:text="@string/rk_l_tm"
            app:layout_widthPercent="60%" />

        <TextView
            android:id="@+id/rk_l_sl"
            style="@style/font_title"
            android:layout_width="0dp"
            android:layout_toRightOf="@+id/rk_l_tm"
            android:layout_weight="1"
            android:text="@string/rk_l_sl"
            app:layout_widthPercent="20%" />

    </android.support.percent.PercentRelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rk_product_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rk_b_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rk_tab_name" />

        <Button
            android:id="@+id/rk_b_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rk_b_clear" />
    </LinearLayout>

</LinearLayout>
